--- a/bin/build
+++ b/bin/build
@@ -43,8 +43,9 @@ cp ./build/php_Dockerfile ./php/Dockerfile
 sed -i "s/{{PHP_VERSION}}/$phpVersion/g" ./php/Dockerfile
 
 cp ./build/apache_Dockerfile ./apache/Dockerfile
+cp ./build/apache_conf_httpd ./apache/conf/httpd.conf
 
-cp ./build/docker-vhost.conf ./apache/conf/sites-enabled/docker-vhost.conf
+cp ./build/apache_conf_sites-enabled_docker-vhost ./apache/conf/sites-enabled/docker-vhost.conf
 sed -i "s/{{PROJECT_NAME}}/$projectName/g" ./apache/conf/sites-enabled/docker-vhost.conf
 
 cp ./build/exec ./bin/exec
@@ -58,5 +59,7 @@ sed -i "s>{{GIT_REPO}}>$gitRepo>g" ./bin/install
 
 cp ./build/php_ini ./php/php.ini
 sed -i "s/{{PROJECT_NAME}}/$projectName/g" ./php/php.ini
+
+chmod +x ./bin/*
 
 echo "Finished building without errors."
